# al-edu-site

./: .env.example  .gitignore  AGENTS.md  biome.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml
apps/api/: .dockerignore  Dockerfile  requirements.txt
apps/api/app/: __init__.py  config.py  routes.py  run.py
apps/pipelines/: .gitignore  Dockerfile  requirements.txt
apps/pipelines/ext_data/scripts/: coi_join.ipynb  district_idify.ipynb
apps/pipelines/silver/: sample_clean.py
apps/pipelines/utils/: sqlize.ipynb
apps/web/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/components/ui/: DistrictDataTable.tsx
apps/web/src/components/ui/forms/: DistrictFeatureForm.tsx  FeatureAdjustmentForm.jsx  GradeFeatureForm.tsx
apps/web/src/lib/api/: client.ts  queries.ts  types.ts
apps/web/src/lib/validation/: districtFeatureSchema.ts  gradeFeatureSchema.ts
apps/web/src/routes/: __root.tsx  adjusted-features.tsx  index.tsx  select-district.tsx
data_cleaning/: db_diagram.mmd  diagram.mmd  pyproject.toml  schema_metadata.json
data_cleaning/src/data_cleaning/: __init__.py  collect_columns.py  convert_xlsx.py  erd_diagram.mmd
