[project]
name = "data-cleaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Rushing", email = "adrianjrushing@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "debugpy>=1.8.20",
    "fastexcel>=0.19.0",
    "polars>=1.37.1",
    "psycopg[binary]>=3.2.1",
    "xlsx2csv>=0.8.6",
]

[project.scripts]
data-cleaning = "data_cleaning:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
